<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/numbers_view"
        android:layout_width="392dp"
        android:layout_height="189dp"
        android:text="@string/entered_number"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<EditText
        android:id="@+id/numbers_view"
        android:layout_width="351dp"
        android:layout_height="167dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:text="@string/entered_number"
        android:inputType="number"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <Button
        android:id="@+id/c_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="95sp"
        android:layout_height="125sp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="button_clear"
        android:text="@string/clear"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/seven_button"
        app:layout_constraintEnd_toStartOf="@+id/bracket_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numbers_view" />

    <Button
        android:id="@+id/bracket_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="95sp"
        android:layout_height="125sp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="button_brackets"
        android:text="@string/bracket"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/eight_button"
        app:layout_constraintEnd_toStartOf="@+id/percent_button"
        app:layout_constraintStart_toEndOf="@+id/c_button"
        app:layout_constraintTop_toBottomOf="@+id/numbers_view" />

    <Button
        android:id="@+id/percent_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="95sp"
        android:layout_height="125sp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="button_percent"
        android:text="@string/percent"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/nine_button"
        app:layout_constraintEnd_toStartOf="@+id/divide_button"
        app:layout_constraintStart_toEndOf="@+id/bracket_button"
        app:layout_constraintTop_toBottomOf="@+id/numbers_view" />

    <Button
        android:id="@+id/divide_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="95sp"
        android:layout_height="125sp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="button_divide"
        android:text="@string/divide"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/multiply_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/percent_button"
        app:layout_constraintTop_toBottomOf="@+id/numbers_view" />

    <Button
        android:id="@+id/seven_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="95sp"
        android:layout_height="125sp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="button_seven"
        android:text="@string/seven"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/four_button"
        app:layout_constraintEnd_toStartOf="@+id/eight_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_button" />

    <Button
        android:id="@+id/eight_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="95sp"
        android:layout_height="125sp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="button_eight"
        android:text="@string/eight"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/five_button"
        app:layout_constraintEnd_toStartOf="@+id/nine_button"
        app:layout_constraintStart_toEndOf="@+id/seven_button"
        app:layout_constraintTop_toBottomOf="@+id/bracket_button" />

    <Button
        android:id="@+id/nine_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="95sp"
        android:layout_height="125sp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="button_nine"
        android:text="@string/nine"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/six_button"
        app:layout_constraintEnd_toStartOf="@+id/multiply_button"
        app:layout_constraintStart_toEndOf="@+id/eight_button"
        app:layout_constraintTop_toBottomOf="@+id/percent_button" />

    <Button
        android:id="@+id/multiply_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="95sp"
        android:layout_height="125sp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="button_multiply"
        android:text="@string/multiply"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/minus_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nine_button"
        app:layout_constraintTop_toBottomOf="@+id/divide_button" />

    <Button
        android:id="@+id/four_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="95sp"
        android:layout_height="125sp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="button_four"
        android:text="@string/four"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/one_button"
        app:layout_constraintEnd_toStartOf="@+id/five_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven_button" />

    <Button
        android:id="@+id/five_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="95sp"
        android:layout_height="125sp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="button_five"
        android:text="@string/five"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/two_button"
        app:layout_constraintEnd_toStartOf="@+id/six_button"
        app:layout_constraintStart_toEndOf="@+id/four_button"
        app:layout_constraintTop_toBottomOf="@+id/eight_button" />

    <Button
        android:id="@+id/six_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="95sp"
        android:layout_height="125sp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="button_six"
        android:text="@string/six"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/three_button"
        app:layout_constraintEnd_toStartOf="@+id/minus_button"
        app:layout_constraintStart_toEndOf="@+id/five_button"
        app:layout_constraintTop_toBottomOf="@+id/nine_button" />

    <Button
        android:id="@+id/minus_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="95sp"
        android:layout_height="125sp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="button_minus"
        android:text="@string/minus"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/plus_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/six_button"
        app:layout_constraintTop_toBottomOf="@+id/multiply_button"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/one_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="95sp"
        android:layout_height="125sp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="button_one"
        android:text="@string/one"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/zero_button"
        app:layout_constraintEnd_toStartOf="@+id/two_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four_button" />

    <Button
        android:id="@+id/two_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="95sp"
        android:layout_height="125sp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="button_two"
        android:text="@string/two"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/decimal_button"
        app:layout_constraintEnd_toStartOf="@+id/three_button"
        app:layout_constraintStart_toEndOf="@+id/one_button"
        app:layout_constraintTop_toBottomOf="@+id/five_button" />

    <Button
        android:id="@+id/three_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="95sp"
        android:layout_height="125sp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="button_three"
        android:text="@string/three"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/delete_button"
        app:layout_constraintEnd_toStartOf="@+id/plus_button"
        app:layout_constraintStart_toEndOf="@+id/two_button"
        app:layout_constraintTop_toBottomOf="@+id/six_button" />

    <Button
        android:id="@+id/plus_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="95sp"
        android:layout_height="125sp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="button_plus"
        android:text="@string/plus"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/equals_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/three_button"
        app:layout_constraintTop_toBottomOf="@+id/minus_button" />

    <Button
        android:id="@+id/zero_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="95sp"
        android:layout_height="125sp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="button_zero"
        android:text="@string/zero"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/decimal_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one_button" />

    <Button
        android:id="@+id/decimal_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="95sp"
        android:layout_height="125sp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="button_decimal"
        android:text="@string/decimal_point"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        app:layout_constraintStart_toEndOf="@+id/zero_button"
        app:layout_constraintTop_toBottomOf="@+id/two_button" />

    <Button
        android:id="@+id/delete_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="95sp"
        android:layout_height="125sp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="button_delete"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equals_button"
        app:layout_constraintStart_toEndOf="@+id/decimal_button"
        app:layout_constraintTop_toBottomOf="@+id/three_button" />

    <Button
        android:id="@+id/equals_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="95sp"
        android:layout_height="125sp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="button_equals"
        android:text="@string/equals"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delete_button"
        app:layout_constraintTop_toBottomOf="@+id/plus_button"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>